--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
     <P>student at SRM UNIVERSITY AP</P>
     <h4>CONTRIBUTORS:</h4>
     <h5>Jagannadh Nooka</h5>
-    <h5>Jagadhesh</h5>
+    <h5>Jagadhesan</h5>
     <h5>Vinay Balle</h5>
     <h5>Amrish</h5>
     
