--- a/index.html
+++ b/index.html
@@ -181,12 +181,21 @@ body {
         <p>3.LEDs will act as the light source and further we will use one photodiode to capture the light </p>
         <p>reflected from the soil</p>
         <p>4.Photodiode basically converts the light energy to electricity(current)</p>
+        <p>5.Now Our main objective is to measure the absorbance </p>
+        <p>6.To measure the absorption will calculate the intensity of transmittent light (I0) and incident light(I1)</p>
+        <img src="absorption.png" alt="" srcset="">
 
-    </p>p>
+        <p>7.The difference in light intensity level was evaluated by the Photodiode</p>
+        <p>8.And the absorption rate was measured through the reflected light detected by the photodiode sensor module and convert into voltages. </p>
+        <p>9.The detected voltage for each nutrient was compared with a threshold values that was developed by the Arduino microcontroller which was used to determine the deficiency of nutrient content in soil into three voltage levels</p>
+        <p>10.These values were determined based on the absorption rate of each nutrient during the sample measurement</p>
+    </p>
     <h5></h5>
     <div ><img src="flow.png" width="300" height="250"></div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <h4>CONCLUSION</h4>
+    <p>Traditional Method of determining content of NPK was time consuming and only people having knowledge of chemicals could do this .</p>
+    Like we want to determine the content of nitrogen we had to add some external agent But This project can reduce the problems in determining the amount of nutrients in soil with a cheaper cost with other technology.
+    It can also reduce the undesired use of fertilizers to be added to the soil which can cause dead plants and reduce plant quality and quantity. 
   </div>
 </div>
 
