--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ body {
 </div>
 
 <div class="footer">
-  <h2>&copy;copyright thinked.com</h2>
+  <h2>&copy;copyright villlage.com</h2>
 </div>
 
 </body>
