--- a/index.html
+++ b/index.html
@@ -131,15 +131,13 @@ body {
 
 <div class="navbar">
   <a href="#" class="active">Home</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
+  
 </div>
 
 <div class="row">
   <div class="side">
     <h2>ABOUT US</h2>
-    <P>student at SRM UNIVERSITY AP</P>
+    <P>We are students at SRM UNNIVERSITY AP ,Pursuing Bachlor of technology in electronics and communicational engineering</P>
     <h4>CONTRIBUTORS:</h4>
     <h5>Jagannadh Nooka</h5>
     <h5>Jagadhesan</h5>
